--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ target/
 
 src/main/resources/application.yml
 src/main/resources/application-dev.yml
+src/main/resources/application-local.yml
+src/main/resources/application-prod.yml
+
 
 ### STS ###
 .apt_generated
