--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
 			<version>2.7.16</version>
 		</dependency>
 
-
+		<!--       jwt-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
