--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ src/main/resources/application.yml
 src/main/resources/application-dev.yml
 src/main/resources/application-local.yml
 src/main/resources/application-prod.yml
-
+src/main/resources/image/*
 
 ### STS ###
 .apt_generated
